--- a/index.html
+++ b/index.html
@@ -1,72 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>   
+  <link rel = "stylesheet" href = "./styles/styles.css">
   <meta charset="UTF-8">
   <meta name="description" content="Help the Earth">
   <meta name="keywords" content="recycle, reuse, ecofriendly">
   <meta name="author" content="Aiden Choi">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Coda+Caption:wght@800&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <script src="https://use.fontawesome.com/b14d803a9e.js"></script>
-  <link rel = "stylesheet" href = "./styles.css">
+  
   <title>Help the Earth</title>
+  
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-primary" id = "navbar">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#" id = "brand">
-        <img src = "./images/earthLogo.png" alt="Earth" id = "earthBrand"/>
-        Help the Earth
-    </a>
-    <button class="navbar-toggler btn-info btn-outline-info" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" title = "Menu" id = "hamburger">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home 🏠</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Lessons 📄</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Act Now 🌎</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Settings ⚙️</a>
-        </li>
-      </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search 🔍" aria-label="Search">
-        <button class="btn btn-info" type="submit">Search</button>
-      </form>
+<div class = "container-fluid">
+  <nav class="navbar navbar-expand-lg navbar-light bg-primary" id = "navbar2">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#" id = "brand">
+          <img src = "./images/earthLogo.png" alt="Earth" id = "earthBrand"/>
+          Help the Earth
+      </a>
+      <button class="navbar-toggler btn-info btn-outline-info" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" title = "Menu" id = "hamburger">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home 🏠</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Resources 📄</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Games 🎮</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Act Now 🌎</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Settings ⚙️</a>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search 🔍" aria-label="Search">
+          <button class="btn btn-info" type="submit">Search</button>
+        </form>
+      </div>
     </div>
-  </div>
-</nav>
-<header>
-    <h1>Help the Earth</h1>
-    <p id = "reason">
-      Our planet earth is being threatened by us.  We are constantly doing things that hurt the environment like deforestation and littering.  The impacts of those actions can be lasting to the environment.  Climate change is also affecting our planet in dangerous ways to wildlife.  Please press this button for our beloved planet earth.
-    </p>
+  </nav>
+  
+  <header>
+      <h1>Help the Earth</h1>
+      <p id = "reason">
+        Our planet earth is being threatened by us.  We are constantly doing things that hurt the environment like deforestation and littering.  The impacts of those actions can be lasting to the environment.  Climate change is also affecting our planet in dangerous ways to wildlife.<br>  Stand up for our beloved earth by pressing this button
+      </p>
+  
+      <button class="btn btn-primary" id = "act-btn">Act Now</button>
 
-    <button class="btn btn-primary act-btn">Act Now</button>
-    <figure>
-      <blockquote class="blockquote">
-        <p>Every year, new species of animals are addded to the endangered species list. Man in his arrogance appears to think that he can escape that list.</p>
-      </blockquote>
-      <figcaption class="blockquote-footer">
-        Senator Gaylord Nelson
-      </figcaption>
-    </figure>
-</header>
-
-<footer>
-  <p>&copy; Copyright 2021 by Aiden Choi</p>
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-<script src="./scripts/app.js"></script>
+      <hr/>
+      <figure>
+        <blockquote class="blockquote">
+          <p>Every year, new species of animals are addded to the endangered species list. Man in his arrogance appears to think that he can escape that list.</p>
+        </blockquote>
+        <figcaption class="blockquote-footer fst-italic fw-lighter">
+          Senator Gaylord Nelson
+        </figcaption>
+      </figure>
+  </header>
+  
+  <footer>
+    <p>&copy; Copyright 2021 by Aiden Choi</p>
+  </footer>
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+  <script src="./scripts/app.js"></script>
+</div>
 </body>
 </html>
