--- a/index.html
+++ b/index.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>   
-  <link rel = "stylesheet" href = "./styles/styles.css">
+  <!-- Meta tags -->
+
   <meta charset="UTF-8">
   <meta name="description" content="Help the Earth">
   <meta name="keywords" content="recycle, reuse, ecofriendly">
   <meta name="author" content="Aiden Choi">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
+  <!-- Links -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Coda+Caption:wght@800&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <script src="https://use.fontawesome.com/b14d803a9e.js"></script>
   
   <title>Help the Earth</title>
-  
+  <!-- Stylesheet -->
+  <link rel = "stylesheet" href = "./styles/styles.css">
 </head>
 <body>
 <div class = "container-fluid">
+  <!--Navbar-->
   <nav class="navbar navbar-expand-lg navbar-light bg-primary" id = "navbar2">
     <div class="container-fluid">
       <a class="navbar-brand" href="#" id = "brand">
-          <img src = "./images/earthLogo.png" alt="Earth" id = "earthBrand"/>
+          <img src = "./images/earthLogo.png" alt="Earth" id = "earthImgBrand"/>
           Help the Earth
       </a>
       <button class="navbar-toggler btn-info btn-outline-info" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" title = "Menu" id = "hamburger">
@@ -46,9 +51,9 @@
             <a class="nav-link" href="#">Settings ⚙️</a>
           </li>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search 🔍" aria-label="Search">
-          <button class="btn btn-info" type="submit">Search</button>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search 🔍" aria-label="Search">
+          <button class="btn btn-info my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
     </div>
@@ -60,7 +65,12 @@
         Our planet earth is being threatened by us.  We are constantly doing things that hurt the environment like deforestation and littering.  The impacts of those actions can be lasting to the environment.  Climate change is also affecting our planet in dangerous ways to wildlife.<br>  Stand up for our beloved earth by pressing this button
       </p>
   
-      <button class="btn btn-primary" id = "act-btn">Act Now</button>
+      <div class = "text-center">
+        <button class="btn btn-primary animated infinite rubberBand bounce heartBeat" id = "act-btn">
+          <span class="sr-only">Loading...</span>
+          Act Now
+        </button>
+      </div>
 
       <hr/>
       <figure>
@@ -77,7 +87,9 @@
     <p>&copy; Copyright 2021 by Aiden Choi</p>
   </footer>
   
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <script src="./scripts/app.js"></script>
 </div>
 </body>
